lesson 8 - continuations continued/tortoise.peg
start
    = ws st: statements ws
        { return st; }

// Basics
number_frac
    = "." chars:[0-9]*
        { return "." + chars.join(''); }

number
    = negative: [-]* chars:[0-9]+ frac:number_frac?
        { return parseFloat(negative + chars.join('') + frac); }

whitespace
   = [ \t\n]

sigws 
    =  whitespace+
ws 
    = whitespace*

validfirstchar
    = [a-zA-Z_]

validchar
    = [0-9a-zA-Z_]

identifier
    = firstchar:validfirstchar chars:validchar*
        { return firstchar + chars.join(''); }

//The rest

expression
    = expr:comparative
        { return expr; }

comp_op = "<=" / ">=" / "!=" / "==" / "<" / ">"

comparative
    = left:additive ws op:comp_op ws right:comparative
        { return {tag: op, left:left, right:right}; }
    / additive

additive_op = "+" / "-"

additive
    = left:multiplicative ws op:additive_op ws right:additive
        { return {tag:op, left:left, right:right}; }
    / multiplicative

mult_op = "*" / "/"

multiplicative
    = left:primary ws op:mult_op ws right:multiplicative
        { return {tag:op, left:left, right:right}; }
    / primary

primary
    = number
    / v:identifier "(" ws ")"
        { return {tag:"call", name:v, args:[]}; }
    / v:identifier "(" ws args:arglist ws ")"
        { return {tag:"call", name:v, args:args}; }
    / "(" ws expr:expression ws ")"
        { return expr; }
    / id: identifier
        { return {tag: "ident", name: id}; }



comma_expression = "," ws expr:expression
        { return expr; }

arglist
    = first:expression rest:comma_expression*
        { return [first].concat(rest); }

comma_identifier = "," ws v:identifier
        { return v; }

ident_list
    = first:identifier rest:comma_identifier*
        { return [first].concat(rest); }

identifier
    = chars:[a-z]+
        { return chars.join(''); }

statements 
    = statement*

statement
    = ws v:identifier ws ":=" ws expr:expression ws ";" ws
        { return { tag:":=", left:v, right:expr }; }
    / ws "var" sigws v:identifier ";"
        { return { tag:"var", name: v}; }
    / ws "if" ws "(" exp: expression ws ")" ws "{" body:statements ws "}"
        { return { tag:"if", expr: exp, body:body} }
    / ws "repeat" ws "(" exp: expression ")" ws "{" body:statements ws"}"
        { return { tag:"repeat", expr: exp, body:body} }
    / ws "define" sigws v:identifier
        "(" ws ")" ws "{" ws body:statements ws "}" ws
        { return { tag:"define", name:v, args:[], body:body }; }
    / ws "define " ws v:identifier ws "(" ws args:ident_list ws ")" ws "{" ws body:statements ws "}"
        { return { tag:"define", name:v, args:args, body:body }; }
    / ws expr:expression ws ";"
        { return { tag:"ignore", body:expr }; }
